kubernetes/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: go-app.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-app-service
                port:
                  number: 80
